--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin: 40px auto;
   margin-bottom: 40px;
   border: 1px solid #000;
   box-shadow: grey 0px 0px 10px;
