--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding-left: 0;
+  padding-inline-start: -40px;
+  /* justify-content: center; */
+  padding-left: -40;
+  /* margin-left: 0; */
 }
 
 .item {
@@ -14,6 +16,8 @@
   border: 1px solid #ccc;
   box-shadow: #ccc 0px 0px 5px;
   padding-left: 20px;
+  border: 1px solid #000;
+  box-shadow: grey 0px 0px 10px;
 }
 .item:not(:last-child) {
   margin-bottom: 10px;
