--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -2,22 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-inline-start: -40px;
-  /* justify-content: center; */
-  padding-left: -40;
-  /* margin-left: 0; */
 }
 
 .item {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  width: 300px;
+  width: 280px;
   border: 1px solid #ccc;
   box-shadow: #ccc 0px 0px 5px;
   padding-left: 20px;
   border: 1px solid #000;
   box-shadow: grey 0px 0px 10px;
+  margin-bottom: 20px;
 }
 .item:not(:last-child) {
   margin-bottom: 10px;
